objects/vlocity_ins__OrchestrationPlan__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>The account linked to the Work Plan</relationshipLabel>
        <relationshipName>WorkProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CompletedWorkDays__c</fullName>
        <description>Completed working days</description>
        <label>Work Days Completed %</label>
        <summarizedField>vlocity_ins__OrchestrationItem__c.vlocity_ins__DurationCompletedInDays__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__OrchestrationItem__c.vlocity_ins__State__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Skipped</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__OrchestrationItem__c.vlocity_ins__OrchestrationPlanId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <description>Order End Date</description>
        <formula>vlocity_ins__OrderId__r.EndDate</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsBeingWatched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Being Watched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastOrchestrationItemUpdate__c</fullName>
        <label>Last Orchestration Item Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderAccountId__c</fullName>
        <description>Order Item account name</description>
        <formula>vlocity_ins__OrderId__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Orchestration Plans</relationshipLabel>
        <relationshipName>OrchestrationPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PercentageComplete__c</fullName>
        <description>Completed Work Days in Percent</description>
        <formula>vlocity_ins__CompletedWorkDays__c / vlocity_ins__TotalWorkDays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Days Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PlanSchedulingDueDate__c</fullName>
        <description>Datetime to recalculate plan schedule by daily batch job. It is set as earliest Due Date of orchestration items in Ready/Running/Fatally Failed states. If blank then plan is not scheduled. Set as blank when plan is completed.</description>
        <inlineHelpText>Earliest Due Date of orchestration items in Ready/Running/Fatally Failed states.</inlineHelpText>
        <label>Plan Scheduling Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <description>Order Effective Date</description>
        <formula>vlocity_ins__OrderId__r.EffectiveDate</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Freezing</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalWorkDays__c</fullName>
        <description>Total Working days</description>
        <label>Work Days Total</label>
        <summarizedField>vlocity_ins__OrchestrationItem__c.vlocity_ins__DurationInDays__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__OrchestrationItem__c.vlocity_ins__State__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Skipped</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__OrchestrationItem__c.vlocity_ins__OrchestrationPlanId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Orchestration Plan</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Plan{0000000}</displayFormat>
        <label>Orchestration Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>